--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('photo_5879805289467857143_y.jpg');
+  background-image: url('photo_5881881953400113159_y (1).jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
